# IndustrialAI

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
data/: baseline_operating_window.csv
data/reference/: c0_off_nominal_baseline.json  c0_pid_tuning.json  c0_pid_tuning_shootout.json  c1_baseline_kpis.json  c1_disturbance_rejection_baseline.json  c1_off_nominal_baseline.json  c1_regularization_sensitivity.json  c1_regularization_sweep.json  nemotron_super_v1_5_chat_template.jinja  off_nominal_on_spec_pre_stages.json  operating_window_states.parquet  phase3_llm_smoke.json  skogestad_column_a_steady_state.json  skogestad_column_a_trajectories.json
docs/: figures.md  kpis.md  pre_submission_checklist.md
docs/analyses/: 2026-06-02_schritt_b_failure_diagnosis.md
docs/decisions/: 001-idaes-over-dwsim.md  002-c3c4-over-chlorosilane.md  003-novelty-positioning.md  004-publication-strategy.md  005-local-model-selection.md  006-hierarchical-control-architecture.md  007-skogestad-column-a-over-c3c4-train.md  008-deferred-real-data-validation.md  009-c2c3-regulatory-backend.md  010-fail-fast-no-fallback-policy.md  011-inference-stack-split.md  012-cross-family-ablation-deepseek.md
docs/setup/: idaes_on_macos.md
notebooks/: 01_twin_walkthrough.ipynb  03_agent_skeleton.ipynb
paper/: manuscript.md  methods_phase3_buckets.md  outline.md
src/industrial_ai/: __init__.py  io.py
src/industrial_ai/agents/: __init__.py  errors.py  graph.py  llm_client.py  regulatory_backend.py  state.py  tools.py
src/industrial_ai/control/: __init__.py  c0_pid_only.py  c0_variants.py  c1_linear_mpc.py  decoupler.py  off_nominal_scenarios.py  relay_tuning.py  scenarios.py  simc.py
src/industrial_ai/evaluation/: __init__.py  kpis.py
src/industrial_ai/safety/: __init__.py
src/industrial_ai/twin/: __init__.py  data_logging.py  regulatory_pid.py  setpoint_interface.py  simulate.py
src/industrial_ai/twin/column_a/: __init__.py  assumptions.md  balances.py  casadi_model.py  integrator.py  linearize.py  model.py  operating_window.py  parameters.py  steady_state.py
src/industrial_ai/twin/column_a/configurations/: __init__.py  dv.py  ldvb.py  lv.py
tests/: conftest.py  test_column_a_against_matlab.py  test_doe_analyze.py  test_doe_confirmation.py  test_doe_sweep.py  test_io.py  test_offnominal_screening.py  test_smoke_offnominal_dispatch.py
tests/agents/: test_graph.py  test_graph_live_llm.py  test_llm_client.py  test_openai_live_llm.py  test_regulatory_backend.py  test_state.py  test_tools.py
tests/control/: test_c0_baseline_kpi_smoke.py  test_c0_pid_only.py  test_c0_variants.py  test_c1_linear_mpc.py  test_c1_vs_c0_gate.py  test_decoupler.py  test_off_nominal_baselines.py  test_off_nominal_scenarios.py  test_pid_shootout_consistency.py  test_relay_tuning.py  test_scenarios.py  test_simc.py  test_simc_2dof_tracking.py
tests/evaluation/: test_kpis.py
tests/twin/: conftest.py  test_balances.py  test_casadi_model.py  test_column_a_model.py  test_data_logging.py  test_dv_configuration.py  test_ldvb_configuration.py  test_linearize_casadi_backend.py  test_lv_configuration.py  test_lv_disturbance_scenarios.py  test_operating_window.py  test_operating_window_lookup.py  test_rate_limiter_divergence_guard.py  test_regulatory_pid.py  test_setpoint_interface.py  test_simulate_wall_clock_cap.py
tools/: acquire_tep_dataset.py  analyze_doe_sweep.py  analyze_offnominal_screening.py  build_c1_regularization_sweep.py  extend_grid_for_kpis_section_2_2.py  generate_c0_pid_tuning.py  generate_skogestad_reference_trajectories.m  phase3_llm_smoke_check.py  probe_c1_regularization_sensitivity.py  run_c0_off_nominal_grid.py  run_c1_baseline_scenarios.py  run_c1_disturbance_rejection_baseline.py  run_c1_off_nominal_grid.py  run_c2_smoke.py  run_doe_confirmation.py  run_doe_sweep.py  run_offnominal_screening.py  run_operating_window_sweep.py  run_pid_shootout.py
