[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-ai"
version = "0.0.1"
description = "Safety-gated agentic control for coupled multivariable processes — distillation case study."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christian Rosenthal" }]
keywords = [
    "industrial-ai",
    "agentic-control",
    "process-control",
    "digital-twin",
    "anomaly-detection",
    "idaes",
    "langgraph",
    "mpc",
]

dependencies = [
    # Process simulation
    "idaes-pse>=2.5",
    "pyomo>=6.7",
    # Numerics / data
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    # Parquet backend for the data-logging contract (docs/figures.md).
    "pyarrow>=15.0",
    # Linear MPC baseline (configuration C1, see ADR 006)
    "do-mpc>=5.0",
    # Agentic layer
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # OpenAI-compatible client — used against the local LM Studio endpoint
    # (http://localhost:1234/v1). Framework-agnostic: also works with
    # Ollama, vLLM, llama.cpp server, or remote providers without code changes.
    "langchain-openai>=0.2",
    # ML / anomaly detection
    "scikit-learn>=1.4",
    "torch>=2.2",
    # Configs & reproducibility
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    # Plotting (paper-grade)
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length — handled by formatter
    "RUF002", # ambiguous Unicode — EN DASH and EM DASH are intentional in citations
]

[tool.ruff.lint.per-file-ignores]
# Skogestad Column A code reproduces the published mathematical notation
# (X, U, L, V, M, NT, NF, alpha, xB, yD, L0, V0, qF, zF, dMdt, dMxdt, ...).
# Forcing snake_case here would break readability against the cited
# Skogestad & Morari 1988 / Skogestad 1997 equations and the MATLAB source
# at https://skoge.folk.ntnu.no/.../cola/.
"src/industrial_ai/twin/**" = ["N803", "N806", "N815"]
"tests/twin/**" = ["N803", "N806", "N815"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "idaes.*",
    "pyomo.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain_openai.*",
    "do_mpc.*",
    "scipy.*",
    "pandas.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --cov=industrial_ai --cov-report=term-missing"
testpaths = ["tests"]
